Fix size on iphone

--- a/site/assets/scss/components/_homepage.scss
+++ b/site/assets/scss/components/_homepage.scss
@@ -6,6 +6,7 @@
     width: 100%;
     height: 100%;
     position: fixed;
+    touch-action: none;
 
     &_indic {
         position: absolute;
